--- a/react-base/src/scss/components/_navbar.scss
+++ b/react-base/src/scss/components/_navbar.scss
@@ -78,6 +78,10 @@
 			color: white;
 			padding: 3rem;
 			display: block;
+
+			@media only screen and (min-width: 768px) {
+				padding: 0 0 0 3rem;
+			}
 		}
 	}
 
